Bump tool documentation